[package]
name = "escrow_q3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_q3"

[features]
default = []
cpi = ["no-entrypoint"]
anchor-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version ="0.31.0", features = ["init-if-needed"]}
anchor-spl = "0.31.1"

