[package]
name = "nft_staking_q3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking_q3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
init_if_needed = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"